maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:35: error: not found: value d
	if(isDirLibre(d:Direction)){
                      ^